--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <main>
+      <img src="./images/image-qr-code.png" alt="QR-code"  class="qr-image"/>
+      <h1>Improve your front-end skills by building projects</h1>
+
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </main>
 
     <footer class="attribution">
       Challenge by
